GearsetPOC/force-app/main/default/objects/Activity__c/Activity__c.object-meta.xml
<CustomObject>
    <label>Activity</label>
    <nameField>
        <displayFormat>A{00000}</displayFormat>
        <label>Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>