GearsetPOC/force-app/main/default/objects/Activity__c/fields/Account_Name_Trade_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Trade_Contracts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name (Trade Contracts)</label>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>