GearsetPOC/force-app/main/default/objects/Activity__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <label>Attendees</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>