GearsetPOC/force-app/main/default/objects/Activity__c/fields/Email_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_To__c</fullName>
    <label>Email Sent To</label>
    <length>150</length>
    <type>Text</type>
</CustomField>