GearsetPOC/force-app/main/default/objects/Activity__c/fields/Email_Sent_To_BCC__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_To_BCC__c</fullName>
    <label>Email Sent To (BCC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>