GearsetPOC/force-app/main/default/objects/Activity__c/fields/Email_Sent_To_CC__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_To_CC__c</fullName>
    <label>Email Sent To (CC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>