GearsetPOC/force-app/main/default/objects/Activity__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>