GearsetPOC/force-app/main/default/objects/Activity__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective(s)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>