GearsetPOC/force-app/main/default/objects/Activity__c/fields/Original_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_Date__c</fullName>
    <label>Original Created Date</label>
    <type>Date</type>
</CustomField>