GearsetPOC/force-app/main/default/objects/Activity__c/fields/Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner__c</fullName>
    <formula>Account_Name__r.Owner:User.FirstName + &quot; &quot; +  Account_Name__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Owner</label>
    <type>Text</type>
</CustomField>