GearsetPOC/force-app/main/default/objects/Activity__c/fields/Regional_Office__c.field-meta.xml
<CustomField>
    <fullName>Regional_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Office</label>
    <referenceTo>Regional_Office__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>