GearsetPOC/force-app/main/default/objects/Activity__c/fields/ROI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>ROI_Feedback__c</fullName>
    <label>ROI / Feedback</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>