GearsetPOC/force-app/main/default/objects/Activity__c/recordTypes/Appointment.recordType-meta.xml
<RecordType>
    <fullName>Appointment</fullName>
    <active>true</active>
    <label>Appointment</label>
</RecordType>