GearsetPOC/force-app/main/default/objects/Activity__c/recordTypes/Archived_Emails.recordType-meta.xml
<RecordType>
    <fullName>Archived_Emails</fullName>
    <active>true</active>
    <label>Archived Emails</label>
</RecordType>