GearsetPOC/force-app/main/default/objects/Activity__c/recordTypes/Archived_Notes.recordType-meta.xml
<RecordType>
    <fullName>Archived_Notes</fullName>
    <active>true</active>
    <label>Archived Notes</label>
</RecordType>