GearsetPOC/force-app/main/default/objects/Activity__c/recordTypes/Sales_Activity.recordType-meta.xml
<RecordType>
    <fullName>Sales_Activity</fullName>
    <active>true</active>
    <label>Sales Activity</label>
</RecordType>